--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,22 @@
  * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.5.1/samples
  * This project uses @Incubating APIs which are subject to change.
  */
+plugins {
+    id 'java'
+}
+
+group 'automation.azure.selenium'
+version '1.0'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:1.7.0'
+}
+
+test {
+    useJUnitPlatform()
+}
