add toochain support to discover compile jdk version

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:1.7.0'
 }
 
+java {
+  toolchain {
+    languageVersion.set(JavaLanguageVersion.of(11))
+  }
+}
+
 test {
     useJUnitPlatform()
 }
