--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,11 @@ dependencies {
 }
 
 java {
-  toolchain {
-    languageVersion.set(JavaLanguageVersion.of(11))
-  }
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+    /*toolchain {
+        languageVersion.set(JavaLanguageVersion.of(11))
+    }*/
 }
 
 test {
