--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,9 @@ dependencies {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-    /*toolchain {
-        languageVersion.set(JavaLanguageVersion.of(11))
-    }*/
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
 }
 
 tasks.withType(JavaCompile) {
