--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,16 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:1.7.0'
+    implementation 'org.testng:testng:7.4.0'
+    implementation 'commons-io:commons-io:1.3.2'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.1.4'
+    implementation 'com.browserstack:browserstack-local-java:1.0.6'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    compileOnly 'com.browserstack:browserstack-java-sdk:latest.release'
 }
+
+def browserstackSDKArtifact = configurations.compileClasspath.resolvedConfiguration.resolvedArtifacts.find { it.name == 'browserstack-java-sdk' }
+
 
 java {
     toolchain {
@@ -33,4 +42,22 @@ tasks.withType(JavaCompile) {
 
 test {
     useJUnitPlatform()
+}
+
+task sampleTest(type: Test) {
+    useTestNG() {
+        dependsOn cleanTest
+        useDefaultListeners = true
+        suites "config/sample-test.testng.xml"
+        jvmArgs "-javaagent:${browserstackSDKArtifact.file}"
+    }
+}
+
+task localTest(type: Test) {
+    useTestNG() {
+        dependsOn cleanTest
+        useDefaultListeners = true
+        suites "config/local-test.testng.xml"
+        jvmArgs "-javaagent:${browserstackSDKArtifact.file}"
+    }
 }
